tests/files/type_checker_tests/should_fail/023.cmdr
//Should fail on divide set when left side is not a variable
5 /= 3;